# Fuzzy

./: CONTRIBUTING.md  README.md  pyproject.toml
fuzzy/: __main__.py  customizations.py  databases.py  interfaces.py  models.py
fuzzy/cogs/: admin.py  bans.py  infraction_admin.py  locks.py  logs.py  mutes.py  purge.py  warns.py
fuzzy/migrations/: 002.sql
